# C_Claw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pure_c_claw_architecture_design.md
apps/esp32/esp32_s3_qemu/main/: CMakeLists.txt  cc_esp32_s3_qemu_features.c  cclaw_qemu_main.c
apps/esp32/esp32_s3_qemu/main/tools/: cc_esp32_gpio_tool.c
apps/posix/cli/: CMakeLists.txt
apps/posix/cli/config/: config_example.json  plugins.json  user.md
apps/posix/cli/docs/: README.md  config.md
apps/posix/cli/plugins/: weather_tool.py
apps/posix/cli/src/: cc_cli_gateway.c  cc_posix_cli_features.c  main.c
apps/posix/cli/src/mcp/: cc_mcp_manager.c
apps/posix/cli/src/plugin/: cc_jsonrpc_client.c  cc_plugin_manager.c  cc_plugin_process.c
apps/posix/cli/src/sandbox/: cc_docker_sandbox.c
apps/posix/cli/src/tools/: cc_plugin_tool.c  cc_shell_run_tool.c
apps/posix/cli/tests/: CMakeLists.txt  mock_mcp_http_server.py  mock_mcp_server.py  test_mcp_stdio_tool_bridge.c  test_plugin_process_resilience.c  test_plugin_process_serial_call.c  test_runtime_builder_tools.c
apps/stm32/stm32h743i_eval_renode/: CMakeLists.txt  README.md  stm32h743i_eval_renode.ld
apps/stm32/stm32h743i_eval_renode/renode/: stm32h743i_eval.resc
apps/stm32/stm32h743i_eval_renode/src/: FreeRTOSConfig.h  board.c  board.h  board_storage.c  board_storage.h  ethernetif.c  ethernetif.h  ffconf.h  http_smoke.c  http_smoke.h  lwipopts.h  main.c  network.c  network.h  real_llm_smoke.c  real_llm_smoke.h  startup.c  stm32_sd_diskio.c  stm32h7xx_hal_conf.h  syscalls.c  uart_chat.c  uart_chat.h
apps/stm32/stm32h743i_eval_renode/src/arch/: cc.h  perf.h
apps/windows/cli/: CMakeLists.txt
apps/windows/cli/config/: config_example.json  plugins.json  user.md
apps/windows/cli/plugins/: weather_tool.py
apps/windows/cli/src/: cc_cli_gateway.c  cc_windows_cli_features.c  main.c
apps/windows/cli/src/plugin/: cc_jsonrpc_client.c  cc_plugin_manager.c  cc_plugin_process.c
apps/windows/cli/src/sandbox/: cc_docker_sandbox.c  cc_local_sandbox.c
apps/windows/cli/src/tools/: cc_plugin_tool.c  cc_shell_run_tool.c
cclaw/: CMakeLists.txt
cclaw/adapters/: CMakeLists.txt
cclaw/adapters/include/cc/adapters/: cc_builtin_tools.h  cc_default_policy_engine.h  cc_http_llm_provider.h  cc_llm_providers.h
cclaw/adapters/src/llm/: cc_anthropic_provider.c  cc_http_llm_provider.c  cc_ollama_provider.c  cc_openai_provider.c
cclaw/adapters/src/sandbox/: cc_policy_engine_impl.c
cclaw/adapters/src/storage/: cc_inmem_memory_store.c  cc_json_file_memory_store.c  cc_json_file_store.c  cc_memory_artifact_store.c  cc_memory_session_store.c  cc_memory_store_factory.c  cc_sqlite_memory_store.c  cc_sqlite_session_store.c  cc_storage_factory.c
cclaw/adapters/src/tools/common/: cc_file_read_tool.c  cc_file_write_tool.c  cc_http_request_tool.c  cc_memory_tool.c
cclaw/core/: CMakeLists.txt
cclaw/core/include/cc/: cclaw.h
cclaw/core/include/cc/app/: cc_agent_manager.h  cc_agent_runtime.h  cc_app_features.h  cc_cancel_token.h  cc_context_builder.h  cc_mcp_runtime_manager.h  cc_memory_context.h  cc_plugin_protocol.h  cc_run_queue.h  cc_runtime_builder.h  cc_runtime_features.h  cc_session_manager.h  cc_skill_catalog.h  cc_sse_parser.h  cc_tool_executor.h  cc_tool_executor_pool.h  cc_tool_registry_snapshot.h
cclaw/core/include/cc/core/: cc_media.h  cc_memory_entry.h  cc_message.h  cc_observability.h  cc_result.h  cc_session.h  cc_stream_chunk.h  cc_tool_call.h  cc_types.h  cc_version.h
cclaw/core/include/cc/util/: cc_config.h  cc_json.h  cc_memory.h  cc_network_policy.h  cc_redaction.h  cc_string_builder.h  cc_token_counter.h
cclaw/core/src/app/: cc_agent_manager.c  cc_agent_runtime.c  cc_agent_runtime_internal.h  cc_cancel_token.c  cc_context_builder.c  cc_mcp_runtime_manager.c  cc_memory_context.c  cc_plugin_protocol.c  cc_run_queue.c  cc_runtime_builder.c  cc_session_manager.c  cc_skill_catalog.c  cc_sse_parser.c  cc_tool_executor.c  cc_tool_executor_pool.c  cc_tool_registry_snapshot.c
cclaw/core/src/core/: cc_event_bus.c  cc_media.c  cc_memory_entry.c  cc_memory_store.c  cc_message.c  cc_observability.c  cc_result.c  cc_session.c  cc_tool_call.c  cc_tool_registry.c
cclaw/core/src/util/: cc_config.c  cc_json.c  cc_logger.c  cc_memory.c  cc_network_policy.c  cc_redaction.c  cc_string_builder.c  cc_token_counter.c
cclaw/docs/: README.md  architecture.md  concurrency.md  mcp.md  plugins.md  skills.md
cclaw/ports/: CMakeLists.txt
cclaw/ports/include/cc/ports/: cc_artifact_store.h  cc_env.h  cc_event_bus.h  cc_filesystem.h  cc_http_client.h  cc_llm_provider.h  cc_logger.h  cc_memory_store.h  cc_memory_tool_factory.h  cc_path.h  cc_platform.h  cc_platform_check.h  (+8 more)
cclaw/profiles/: core-minimal.cmake  desktop-agent.cmake  esp32-s3-qemu.cmake  mcu-mm-lite.cmake  mcu-text.cmake  multimodal-full.cmake  posix-cli.cmake  stm32h743-renode.cmake  stm32mp135-board.cmake  windows-cli.cmake
cclaw/tests/: CMakeLists.txt
cclaw/tests/adapters/: test_http_allowlist.c  test_memory_store_concurrent.c  test_message_envelope_serialization.c  test_multimodal_content_parts.c  test_tool_executor_policy_approval.c  test_tool_schema_validation.c
cclaw/tests/core/: test_cancel_token.c  test_config_missing_defaults.c  test_config_runtime_sections.c  test_event_bus_async.c  test_event_bus_concurrent.c  test_logger_concurrent.c  test_mcp_jsonrpc_matcher.c  test_mcp_runtime_manager_fake_transport.c  test_memory_query_port.c  test_observability_no_legacy_events.c  test_observability_schema.c  test_path_security.c  test_plugin_protocol_envelope.c  test_redaction.c  test_result_detail.c  test_run_queue_async_interrupt.c  test_run_queue_session_serial.c  test_runtime_concurrent_sessions.c  test_runtime_request_config.c  test_runtime_stream_callback.c  test_skill_catalog_prompt.c  test_sse_parser.c  test_thread_mutex.c  test_tool_executor_pool_lane.c  test_tool_registry_freeze.c
cclaw/tests/packaging/: test_consumer_install.cmake
cclaw/tests/packaging/consumer/: CMakeLists.txt  main.c
cclaw/tests/platform/posix/: test_process_capture.c
(+53 files in other folders)
